fixing long email address on mobile

--- a/assets/scss/templates/_front.scss
+++ b/assets/scss/templates/_front.scss
@@ -92,7 +92,11 @@
 			font-size: 150%;
 			}
 			}
-			
+		.shrinkemail{
+			@include breakpoint(450px down) {
+			font-size: 85%;
+			}
+			}
 		}
 		
 	}
